--- a/SpotifyGame/SpotifyGame.csproj
+++ b/SpotifyGame/SpotifyGame.csproj
@@ -121,6 +121,7 @@
     </Compile>
     <Compile Include="Converters\StringToSong.cs" />
     <Compile Include="Model\EmptyPlaylist.cs" />
+    <Compile Include="Model\GameEngine.cs" />
     <Compile Include="Model\Playlist.cs" />
     <Compile Include="Model\RelayCommand.cs" />
     <Compile Include="Model\Song.cs" />
